# raytracing

./: .gitignore  README.md  pyproject.toml
ray_tracing/: __main__.py  player.py  ray.py  shapes.py
tests/: test_ray_tracing.py
