[tool.poetry]
name = "ray-tracing"
version = "0.1.0"
description = ""
authors = ["Joseph Banks <joseph@josephbanks.me>"]

[tool.poetry.dependencies]
python = "^3.7"
pyglet = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
